--- a/nobody-auth/pom.xml
+++ b/nobody-auth/pom.xml
@@ -34,6 +34,10 @@
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.xj.nobody</groupId>
             <artifactId>nobody-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
